# a2m8

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
a2m8/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  test.lua  tsconfig.json  vite.config.ts
a2m8-lib/: Cargo.toml
a2m8-lib/src/: assets.rs  lib.rs  main.rs  script.lua  stdexamples.lua
a2m8-lib/src/modules/: audio.rs  clipboard.rs  command.rs  displays.rs  env.rs  event_handler.rs  event_sender.rs  json.rs  log.rs  mod.rs  network.rs  notify.rs  open.rs  utils.rs  versions.rs
a2m8-lib/src/private/: event_listener.rs
a2m8-lib/src/std/: event_handler.lua  event_sender.lua  kv.lua  preload.lua  shortcuts.lua  utils.lua
a2m8-shared/: package.json  theme.js
a2m8-site/: astro.config.mjs  astro.config.ts  env.d.ts  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.workers.json
a2m8-site/public/: _headers  _redirects  robots.txt
a2m8-site/src/: consts.ts
a2m8-site/src/components/: Download.tsx  HeadCommon.astro  HeadSEO.astro  ImageList.tsx  Workshop.tsx
a2m8-site/src/components/CodeSnippet/: CodeSnippet.astro  color-contrast.ts  shiki-block.ts  shiki-line.ts  types.ts
a2m8-site/src/components/Footer/: Footer.astro
a2m8-site/src/components/Header/: Header.astro
a2m8-site/src/components/LeftSidebar/: LeftSidebar.astro
a2m8-site/src/components/RightSidebar/: MoreMenu.astro
a2m8-site/src/content/: config.ts
a2m8-site/src/content/docs/: creating.md  introduction.md
a2m8-site/src/content/docs/modules/: index.md
a2m8-site/src/layouts/: Layout.astro  MainLayout.astro
a2m8-site/src/lib/: gitea.ts
a2m8-site/src/pages/: index.astro  workshop.astro
a2m8-site/src/styles/: index.css  theme.css
a2m8/src/: app.tsx  main.rs  monaco.ts
a2m8/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
a2m8/src-tauri/icons/: icon.icns
a2m8/src-tauri/src/: a2m8_config.rs  cli.rs  commands.rs  error.rs  http.rs  main.rs  prelude.rs  script.rs
a2m8/src-tauri/src/utils/: init_lua.rs  mod.rs  spawn_script_handle.rs
a2m8/src/components/: NewScriptListener.tsx  ScriptComponent.tsx  SimpleScript.tsx  UploadScripts.tsx  ViewSource.tsx
a2m8/src/lib/: createScriptUtilities.ts  editScriptStore.ts  script.ts  scriptStore.ts  viewScriptState.ts
a2m8/src/routes/: Home.tsx  SimpleHome.tsx
appfinder/: Cargo.toml  README.md
appfinder/src/: lib.rs
appfinder/src/linux/: mod.rs
appfinder/src/macos/: mod.rs
appfinder/src/windows/: mod.rs
src/: assets.rs  better_require.rs  clipboard.rs  displays.rs  event_handler.rs  event_listener.rs  main.rs  screenshot.rs  script.lua  sleep.rs  stdexamples.lua
src/modules/: audio.rs  clipboard.rs  command.rs  displays.rs  event_handler.rs  event_sender.rs  json.rs  log.rs  mod.rs  network.rs  notify.rs  open.rs  sleep.rs  utils.rs  versions.rs
src/private/: mod.rs
src/std/: event_handler.lua  event_sender.lua  shortcuts.lua  sleep.lua  utils.lua
