[workspace]
resolver = "2"
members = [
    "a2m8-lib",
    #  "a2m8/src-tauri"

]

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
uuid = { version = "1.2.2", features = ["serde", "v6"] }
tokio = { version = "1.24.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "time",
    "fs"
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "parking_lot"
] }
tealr = { features = [
    "mlua",
    "mlua_vendored",
    "mlua_serialize",
    "mlua_send",
    "mlua_lua54",
    "mlua_async",
], git = "https://github.com/Tricked-dev/tealr" }
