[workspace]
resolver = "2"
members = ["a2m8-lib", "a2m8/src-tauri"]

[workspace.package]
version = "0.1.0"
authors = ["trickeddev <tricked@tricked.dev"]
documentation = "https://a2m8.tricked.dev"
license = "MPL-2.0"
repository = "https://github.com/a2m8-app/a2m8"

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
uuid = { version = "1.2.2", features = ["serde", "v6"] }
tokio = { version = "1.24.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "time",
    "fs"
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "parking_lot"
] }
mlua = { version = "0.8", features = [
    "lua54",
    "vendored",
    "parking_lot",
    "async",
    "serde",
    "serialize",
    "mlua_derive",
    "macros",
    "send"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
