[package]
name = "a2m8"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.7", default-features = false, features = ["glow"] }

[patch.crates-io]
bytemuck = { git = "https://github.com/Lokathor/bytemuck" }
