[package]
name = "a2m8"
description = "A Tauri App"
version = "0.1.0"
edition = "2021"
authors = ["Tricked-dev <tricked@tricked.dev>"]
documentation = ""
license = ""
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "global-shortcut", "reqwest-client", "system-tray"] }
typeshare = "1.0.0"
directories = "4.0.1"
rmp-serde = "1.1.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
thiserror = "1.0.38"
a2m8-lib = { path = "../../a2m8-lib" }
mlua = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
