[package]
name = "a2m8"
description = "A Tauri App"
# version = { workspace = true }
version = "0.1.0"
edition = "2021"
default-run = "a2m8"
# authors = { workspace = true }
authors = [""]
documentation = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
# tauri-build = { version = "1.2", features = [] }
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0.0-alpha.8", features = [
    "api-all",
    "global-shortcut",
    "system-tray"
] }
directories = "5"
rmp-serde = "1"
parking_lot = { version = "0.12", features = ["serde"] }
thiserror = "1"
a2m8-lib = { path = "../../a2m8-lib" }
mlua = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env", "cargo"] }
hyper = { version = "0.14", features = ["http1", "server"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
